--- a/index.html
+++ b/index.html
@@ -169,26 +169,26 @@
 			        </div>
 		        </div>
 	        </div>-->
-			<div class="span6">
+			<!--<div class="span6">
 				<div class="thumbnail">
 					<div class="caption">
-						<h3><a href="http://www.vbr.net/">Vail Board of Realtors Holiday Party</a></h3>
-						<p>Private Event</p>
-						<p>December 15, 2017</p>
-						<p>5:00 PM</p>
+						<h3><a href="http://7hermitsbrewing.com/">7 Hermits Brewing Company</a></h3>
+						<p>Hair of the Saint Party</p>
+						<p>March 18, 2017</p>
+						<p>7:00 PM</p>
+					</div>
+				</div>
+			</div>-->
+			<div class="span12">
+				<div class="thumbnail">
+					<div class="caption">
+						<h3><a href="http://7hermitsbrewing.com/">7 Hermits Brewing Company</a></h3>
+						<p>Hair of the Saint Party</p>
+						<p>March 18, 2017</p>
+						<p>7:00 PM</p>
 					</div>
 				</div>
 			</div>
-            <div class="span6">
-                <div class="thumbnail">
-                    <div class="caption">
-	                    <h3><a href="http://7hermitsbrewing.com/">7 Hermits Brewing Company</a></h3>
-	                    <p>H.E.R.O. Classic After Party</p>
-                        <p>January 28, 2017</p>
-                        <p>8:00 PM</p>
-                    </div>
-                </div>
-            </div>
             <!--<div class="span4">
                 <div class="thumbnail">
                     <div class="caption">
