--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="span4">
+				<!--<div class="span4">
 					<div class="thumbnail">
 						<div class="caption">
 							<h3>Rockin' The Boot</h3>
@@ -209,7 +209,7 @@
 							<p>August 5th, 7:00 PM</p>
 						</div>
 					</div>
-				</div>
+				</div>-->
 				<div class="span4">
 					<div class="thumbnail">
 						<div class="caption">
