--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
 			</div>
 		</div>
 		<div class="row-fluid EventsList">
+            <div class="span4">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3>7 Hermits Friday Getdown</h3>
+                        <p><a href="https://www.facebook.com/7Hermits">7 Hermits Brewing Company</a></p>
+                        <p>January 12, 7 PM</p>
+                    </div>
+                </div>
+            </div>
+
 			<div class="span4">
 				<div class="thumbnail">
 					<div class="caption">
@@ -276,7 +286,7 @@
 			<div class="span12">
 				<ul>
 					<li><a class="fancybox" href="images/gallery/photos/big1.jpg" data-fancybox-group="gallery" title="Band photos"><img src="images/gallery/thumb/thumb1.jpg" alt="" /></a></li>
-					<li><a class="fancybox" href="images/gallery/photos/big2.jpg" data-fancybox-group="gallery" title="Band photos"><img src="images/gallery/thumb/thumb2.jpg" alt="" /></a></li>
+			<!--		<li><a class="fancybox" href="images/gallery/photos/big2.jpg" data-fancybox-group="gallery" title="Band photos"><img src="images/gallery/thumb/thumb2.jpg" alt="" /></a></li> -->
 					<li><a class="fancybox" href="images/gallery/photos/big3.jpg" data-fancybox-group="gallery" title="Band photos"><img src="images/gallery/thumb/thumb3.jpg" alt="" /></a></li>
 					<li><a class="fancybox" href="images/gallery/photos/big4.jpg" data-fancybox-group="gallery" title="Band photos"><img src="images/gallery/thumb/thumb4.jpg" alt="" /></a></li>
 					<li><a class="fancybox" href="images/gallery/photos/big5.jpg" data-fancybox-group="gallery" title="Band photos"><img src="images/gallery/thumb/thumb5.jpg" alt="" /></a></li>
